# MercuryFX

./: .env.example  .replit  COMPLETE_PROJECT_EXPORT.md  FINAL_RENDER_INSTRUCTIONS.md  README.md  complete_export.txt  deployment_checklist.md  individual_files_export.txt  main.py  market_data.py  project_export.md  pyproject.toml  render_deployment_final.md  render_deployment_guide.md  render_final_solution.md  render_fix_steps.md  render_ready_summary.md  render_requirements.txt  render_troubleshooting.md  replit.md  requirements.txt  requirements_minimal.txt  risk_management.py  smart_money_concepts.py  smart_money_concepts_render.py  technical_analysis.py  technical_analysis_render.py  telegram_client.py  trading_bot.py
